browser/themes/gnomestripe/browser/browser.css
/* ... */
.toolbarbutton-1 .toolbarbutton-icon {
  -moz-margin-end: 0px;
}

toolbar[mode="full"] .toolbarbutton-1,
toolbar[mode="full"] .toolbarbutton-menubutton-button {
  min-width: 57px;
}

.toolbarbutton-1, .toolbarbutton-menubutton-button {
  padding: 5px;
}

.toolbarbutton-1[checked="true"] {
  padding: 5px !important;
}


#back-button {
  list-style-image: url("moz-icon://stock/gtk-go-back-ltr?size=toolbar");
}
#back-button[disabled="true"] {
  list-style-image: url("moz-icon://stock/gtk-go-back-ltr?size=toolbar&state=disabled");
}

#back-button[chromedir="rtl"] {
  list-style-image: url("moz-icon://stock/gtk-go-back-rtl?size=toolbar");
}
#back-button[disabled="true"][chromedir="rtl"] {
  list-style-image: url("moz-icon://stock/gtk-go-back-rtl?size=toolbar&state=disabled");
}

#forward-button {
  list-style-image: url("moz-icon://stock/gtk-go-forward-ltr?size=toolbar");
}
#forward-button[disabled="true"] {
  list-style-image: url("moz-icon://stock/gtk-go-forward-ltr?size=toolbar&state=disabled");
}

#forward-button[chromedir="rtl"] {
  list-style-image: url("moz-icon://stock/gtk-go-forward-rtl?size=toolbar");
}
#forward-button[disabled="true"][chromedir="rtl"] {
  list-style-image: url("moz-icon://stock/gtk-go-forward-rtl?size=toolbar&state=disabled");
}

#reload-button {
  list-style-image: url("moz-icon://stock/gtk-refresh?size=toolbar");
}
#reload-button[disabled="true"] {
  list-style-image: url("moz-icon://stock/gtk-refresh?size=toolbar&state=disabled");
}

#stop-button {
  list-style-image: url("moz-icon://stock/gtk-stop?size=toolbar");
}
#stop-button[disabled="true"] {
  list-style-image: url("moz-icon://stock/gtk-stop?size=toolbar&state=disabled");
}

#home-button {
  list-style-image: url("moz-icon://stock/gtk-home?size=toolbar");
}
#home-button[disabled="true"] {
  list-style-image: url("moz-icon://stock/gtk-home?size=toolbar&state=disabled");
}

#downloads-button {
  -moz-image-region: rect(0px 24px 24px 0px);
}
#downloads-button[disabled="true"] {
  -moz-image-region: rect(24px 24px 48px 0px);
}

#history-button {
  -moz-image-region: rect(0px 48px 24px 24px);
}
#history-button[disabled="true"] {
  -moz-image-region: rect(24px 48px 48px 24px);
}

#bookmarks-button {
  -moz-image-region: rect(0px 72px 24px 48px);
}
#bookmarks-button[disabled="true"] {
  -moz-image-region: rect(24px 72px 48px 48px);
}

#print-button {
  list-style-image: url("moz-icon://stock/gtk-print?size=toolbar");
}
#print-button[disabled="true"] {
  list-style-image: url("moz-icon://stock/gtk-print?size=toolbar&state=disabled");
}

#new-tab-button {
  -moz-image-region: rect(0px 96px 24px 72px);
}
#new-tab-button[disabled="true"] {
  -moz-image-region: rect(24px 96px 48px 72px);
}

#new-window-button {
  -moz-image-region: rect(0px 120px 24px 96px);
}
#new-window-button[disabled="true"] {
  -moz-image-region: rect(24px 120px 48px 96px);
}

#cut-button {
  list-style-image: url("moz-icon://stock/gtk-cut?size=toolbar");
}
#cut-button[disabled="true"] {
  list-style-image: url("moz-icon://stock/gtk-cut?size=toolbar&state=disabled");
}

#copy-button {
  list-style-image: url("moz-icon://stock/gtk-copy?size=toolbar");
}
#copy-button[disabled="true"] {
  list-style-image: url("moz-icon://stock/gtk-copy?size=toolbar&state=disabled");
}

#paste-button {
  list-style-image: url("moz-icon://stock/gtk-paste?size=toolbar");
}
#paste-button[disabled="true"] {
  list-style-image: url("moz-icon://stock/gtk-paste?size=toolbar&state=disabled");
}


toolbar[iconsize="small"] .toolbarbutton-1 {
  -moz-box-orient: vertical;
  min-width: 0;
  list-style-image: url("chrome://browser/skin/Toolbar-small.png");
}

toolbar[iconsize="small"] .toolbarbutton-1 .toolbarbutton-icon {
  -moz-margin-end: 0px;
}

toolbar[iconsize="small"] .toolbarbutton-1[type="menu-button"] {
  border: 0 !important;
}

toolbar[iconsize="small"] #back-button {
  list-style-image: url("moz-icon://stock/gtk-go-back-ltr?size=menu");
}
toolbar[iconsize="small"] #back-button[disabled="true"] {
  list-style-image: url("moz-icon://stock/gtk-go-back-ltr?size=menu&state=disabled");
}

toolbar[iconsize="small"] #back-button[chromedir="rtl"] {
  list-style-image: url("moz-icon://stock/gtk-go-back-rtl?size=menu");
}
toolbar[iconsize="small"] #back-button[disabled="true"][chromedir="rtl"] {
  list-style-image: url("moz-icon://stock/gtk-go-back-rtl?size=menu&state=disabled");
}

toolbar[iconsize="small"] #forward-button {
  list-style-image: url("moz-icon://stock/gtk-go-forward-ltr?size=menu");
}
toolbar[iconsize="small"] #forward-button[disabled="true"] {
  list-style-image: url("moz-icon://stock/gtk-go-forward-ltr?size=menu&state=disabled");
}

toolbar[iconsize="small"] #forward-button[chromedir="rtl"] {
  list-style-image: url("moz-icon://stock/gtk-go-forward-rtl?size=menu");
}
toolbar[iconsize="small"] #forward-button[disabled="true"][chromedir="rtl"] {
  list-style-image: url("moz-icon://stock/gtk-go-forward-rtl?size=menu&state=disabled");
}

toolbar[iconsize="small"] #stop-button {
  list-style-image: url("moz-icon://stock/gtk-stop?size=menu");
}
toolbar[iconsize="small"] #stop-button[disabled="true"] {
  list-style-image: url("moz-icon://stock/gtk-stop?size=menu&state=disabled");
}

toolbar[iconsize="small"] #reload-button {
  list-style-image: url("moz-icon://stock/gtk-refresh?size=menu");
}
toolbar[iconsize="small"] #reload-button[disabled="true"] {
  list-style-image: url("moz-icon://stock/gtk-refresh?size=menu&state=disabled");
}

toolbar[iconsize="small"] #home-button ,
#personal-toolbar > #home-button {
  list-style-image: url("moz-icon://stock/gtk-home?size=menu");
}
toolbar[iconsize="small"] #home-button[disabled="true"] ,
#personal-toolbar > #home-button[disabled="true"] {
  list-style-image: url("moz-icon://stock/gtk-home?size=menu&state=disabled");
}

toolbar[iconsize="small"] #downloads-button {
  -moz-image-region: rect(0px 16px 16px 0px);
}
toolbar[iconsize="small"] #downloads-button[disabled="true"] {
  -moz-image-region: rect(16px 16px 32px 0px);
}
/* ... */

